# tttc_practice

plugins/ImplicitCounter/: README.md
plugins/ImplicitCounter/ICC_Plugin/: CMakeLists.txt  ImplicitConversionsCounter.cpp
plugins/ImplicitCounter/tests/: test1.cpp  test2.cpp
